<resources>
    <string name="app_name">FYPGymApp</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="fitness_center_name">Fitness Center Name</string>
    <string name="admin_sign_up">Admin Sign Up</string>
    <string name="different_password">Different password</string>
    <string name="email_already_used">Email already used</string>
    <string name="title_activity_featured">Featured</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_categories">Categories</string>
    <string name="featured">Featured</string>
    <string name="categories">Categories</string>
    <string name="fyp">FYP</string>
    <string name="title_activity_display_classes_from_categories">DisplayClassesFromCategories
    </string>
    <string name="popular">Popular</string>
    <string name="near_you">Near You</string>
    <string name="title_activity_registered_classes">RegisteredClasses</string>
    <string name="title_activity_gym_search">GymSearch</string>
    <string name="title_activity_recommended_classes">RecommendedClasses</string>
</resources>
