<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/verylightgrey"
    tools:context="com.example.fypgymapp.MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_sign_up"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="53dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fitness_center_name"
        tools:layout_editor_absoluteY="88dp"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/centerName"
        android:layout_width="256dp"
        android:layout_height="37dp"
        android:inputType="textPersonName"
        tools:background="@android:color/white"
        tools:layout_editor_absoluteY="104dp"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="11dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/centerName"
        android:layout_alignStart="@+id/centerName" />

    <Button
        android:id="@+id/centerLocation"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:ems="12"
        android:text="Get Location From Map"
        tools:layout_editor_absoluteY="104dp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="234dp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/centerLocation"
        android:layout_alignStart="@+id/centerLocation" />

    <EditText
        android:id="@+id/centerDescription"
        android:layout_width="256dp"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:ems="12"
        android:inputType="textShortMessage|textLongMessage"
        tools:background="@android:color/white"
        tools:layout_editor_absoluteY="251dp" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/centerDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</RelativeLayout>